# specforge

./: .gitignore  README.md  pyproject.toml
notebooks/: example.ipynb
src/specforge/: __init__.py  extractor.py  utils.py
